--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+
 :root{
 /* Webflow colors */
 --background1: #1E1E1E;
@@ -21,6 +24,8 @@
 --border1: rgba(255, 255, 255, 0.13);
 --border2: rgba(255, 255, 255, 0.14);
 --border3: rgba(255, 255, 255, 0.19);
+--actionSecondaryBorder: rgba(255, 255, 255, 0.1);
+--actionSecondaryBorderHover: rgba(255, 255, 255, 0.15);
 
 --text1: #F5F5F5;
 --text2: #BDBDBD;
@@ -45,7 +50,7 @@
 --yellowBorder: #D7A220;
 
 --redBackground: #CF313B;
---redBackgroundHover: #CB3535;
+--redBackgroundHover: #CB3535; 
 --redText: #FF8A8A;
 --redIcon: #FF8A8A;
 --redBorder: #E42F3A;
@@ -64,7 +69,7 @@
 
 /* Box shadows for buttons and inputs */
 --boxShadows-action-colored: 0px 0.5px 1px 0px rgba(0, 0, 0, 0.8),0px 0.5px 0.5px 0px rgba(255, 255, 255, 0.20) inset;
---boxShadows-action-secondary: 0px 0.5px 1px rgba(0, 0, 0, 0.8),inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.12);
+--boxShadows-action-secondary: 0px 0.5px 5px rgba(0, 0, 0, 0.8),inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.12);
 --boxShadows-input-inner: 0px 1px 1px -1px rgba(0, 0, 0, 0.13) inset,0px 3px 3px -3px rgba(0, 0, 0, 0.17) inset,0px 4px 4px -4px rgba(0, 0, 0, 0.17) inset,0px 8px 8px -8px rgba(0, 0, 0, 0.17) inset,0px 12px 12px -12px rgba(0, 0, 0, 0.13) inset,0px 16px 16px -16px rgba(0, 0, 0, 0.13) inset;
 
 --boxShadows-menu: 0px 0.5px 0.5px 0px rgba(255, 255, 255, 0.12) inset, 0px 12px 24px 8px rgba(0, 0, 0, 0.04), 0px 8px 16px 4px rgba(0, 0, 0, 0.04), 0px 4px 8px 2px rgba(0, 0, 0, 0.04), 0px 2px 6px 0px rgba(0, 0, 0, 0.04), 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
@@ -74,6 +79,7 @@
 --menu-shadow: 0px 12px 24px 8px rgba(0, 0, 0, 0.08), 0px 8px 16px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px 2px rgba(0, 0, 0, 0.08), 0px 2px 6px 0px rgba(0, 0, 0, 0.08), 0px -0.5px 0.5px 0px rgba(0, 0, 0, 0.12) inset, 0px 0.5px 0.5px 0px rgba(255, 255, 255, 0.12) inset;
 
 /* TYPOGRAPHY */
+
 --font-stack: 'Inter', sans-serif;
 --font-size-small: 11.5px;
 --font-size-small-letter-spacing: -0.115px;
@@ -82,3 +88,4 @@
 --font-weight-medium: 600;
 --border-radius: 4px;
 }
+
