code style update

--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -3,7 +3,7 @@
 
 .storybook-button {
   /* О шрифте*/
-  font-family: 'Inter';
+  font-family: "Inter";
   font-size: 11.5px;
   font-style: normal;
   font-weight: 400;
@@ -51,7 +51,14 @@
 
 /* а сейчас будет ховер */
 .storybook-button:hover {
-  background: var(--action-action-secondary-background-hover, linear-gradient(180deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.16) 100%));
+  background: var(
+    --action-action-secondary-background-hover,
+    linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.18) 0%,
+      rgba(255, 255, 255, 0.16) 100%
+    )
+  );
 }
 
 .storybook-button--primary:hover {
@@ -68,12 +75,19 @@
 }
 
 .storybook-button--ghost:hover {
-  background: var(--action-action-secondary-background-hover, linear-gradient(180deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.16) 100%));
+  background: var(
+    --action-action-secondary-background-hover,
+    linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.18) 0%,
+      rgba(255, 255, 255, 0.16) 100%
+    )
+  );
 }
 
 /* а сейчас будет фокус */
 .storybook-button:focus::before {
-  content: '';
+  content: "";
   width: 105%;
   height: 109%;
   position: absolute;
@@ -84,20 +98,13 @@
 }
 
 .storybook-button--outline:focus {
-border: none;
+  border: none;
 }
-
 
 /* а сейчас будет дизейблед */
 .storybook-button:disabled {
   opacity: 0.4;
+  cursor: not-allowed;
+  /* //TODO: Discuss why its redundant */
   pointer-events: none;
-  cursor: not-allowed; 
 }
-
-
-
-
-
-
-
