--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -1,5 +1,53 @@
 @import url("../variables.css");
 
-.checkbox {
-  /* Some checkbox props */
+.checkbox-container {
+  display: flex;
+  position: relative;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.checkbox-input {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.checkbox-box {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #000;
+  border-radius: 3px;
+  background-color: #fff;
+  cursor: pointer;
+  position: relative;
+}
+
+.checkbox-box.checked {
+  background-color: #007bff;
+}
+
+.checkbox-checkmark {
+  width: 6px;
+  height: 10px;
+  box-shadow: 2px 2px 0 0 #fff;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 50%;
+  margin-top: -9px;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.checkbox-indeterminate-mark {
+  width: 8px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -4px;
 }
